--- a/src/styles/color.less
+++ b/src/styles/color.less
@@ -1,10 +1,10 @@
-@import url('./theme.less');
-.theme1{
-    .theme();//默认样式
+@import url('../styles/theme.less');
+.themea{
+    .theme();
 }
-.theme2{
-    .theme(rgb(141,139,219),rgb(238, 88, 88),rgb(243, 13, 13),rgb(130,126,240));
+.themeb{
+    .theme(blue,#fff);
 }
-.theme3{
-    .theme(rgb(172,214,200),#615f5f,#fff,rgb(91,139,123));
+.themec{
+    .themec(#111,#999);
 }
